tests/cases/standard-library/ok/string/std-string-from-copy.ari
fn main() -> i64 {
  var source = zone::create(16);
  var target = zone::create(16);

  var text = std::string::from(ref mut source, "ari");
  var copied = std::string::copy_to(ref text, ref mut target);
  zone::reset(ref mut source);

  let raw = copied.as_ptr();
  let total = copied.len() + copied.capacity() +
    (copied.get(0) as i64) +
    (copied.get(1) as i64) +
    (copied.get(2) as i64) +
    (ptr_load(raw) as i64);

  zone::destroy(target);
  zone::destroy(source);
  return total % 256;
}
