tests/cases/standard-library/errors/std-string-from-slice-in-after-target-reset.ari
fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);
  var text = std::string::from_string(ref mut source, "ari");
  let view = text.as_slice();
  let copied = std::string::from_slice_in(ref mut target, view);
  zone::reset(ref mut target);
  return copied.get(0) as i64;
}
